--- a/public/styles.css
+++ b/public/styles.css
@@ -19,7 +19,7 @@ header {
 
 .main-background {
     background-color: #24252A;
-    height: 30cm;
+    height: 20cm;
 }
 
 .logo {
@@ -140,4 +140,29 @@ button:hover {
     margin-top: 3%;
     margin-bottom: 3%;
     padding: 12px 15px;
+}
+
+.below {
+    display: block;
+    margin-bottom: 5%;
+    height: 1cm;
+    width: 10cm;
+}
+
+.contact-form {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.center-contact-button {
+    display: block;
+    margin-left: 35%;
+}
+
+.start-page-margin {
+    margin-bottom: 5%;
+}
+
+.center-facebook {
+    margin-left: 35%;
 }
