--- a/public/styles.css
+++ b/public/styles.css
@@ -168,3 +168,12 @@ button:hover {
 .center-facebook {
     margin-left: 35%;
 }
+
+.login-btn {
+    background-color: rgb(116, 142, 58);
+    border-radius: 5px 5px 5px 5px ;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
