--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -128,6 +129,12 @@ button:hover {
 .activity-info p {
     color: white;
     font-size: large;
+}
+
+.day-night-icon {
+    fill: white;
+    padding: 0em .5em;
+    height: 1.4em;
 }
 
 .activity-info p1 {
