--- a/public/style.css
+++ b/public/style.css
@@ -184,3 +184,14 @@ button:hover {
     margin-bottom: 20px;
     margin-right: 20px;
 }
+
+.users-table{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+input[type=checkbox] {
+    transform: scale(1.5);
+    margin-left: 30px;
+    margin-top: 15px;
+}
